--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-scripts": "1.1.4",
+    "reshake": "^1.0.8",
     "shuffle-array": "^1.0.1"
   },
   "scripts": {
